generation ProductDTO,UserDTO,RoleDTO and add services for users and products
